@@ -2,6 +2,9 @@ Tue Feb 18 18:03:55 1997  Richard Basch  <basch@lehman.com>
 
 	* krcp.c: Replace krb5_xfree with krb5_free_data_contents
 	* kcmd.c krlogind.c krshd.c: Use free instead of internal krb5_xfree
+	* krlogin.c: Fixed 8bit character flow under Solaris
+	* kcmd.c: getport() lets the OS pick the port rather than scanning
+	* krshd.c: Don't bother to set lport before calling getport(&lport)
 
 Sat Dec 28 21:06:43 1996  Sam Hartman  <hartmans@luminous.MIT.EDU>
 
